css/styling.css
/*! This code is a heavily modified version of the following:
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

html,
body {
    width: 100%;
    height: 100%;
}

.bigger-text {
    font-size: 24px;
}


.bg-primary {
  /*color: #CCC;*/
  color: #EEE;
  background-color: #1d2120;
}

.bg-secondary {
    background-color: #5a5c51;
    /*color: #CCC;*/
    color: #EEE;
}

.center {
    position: relative;
    /*margin-right: 50%;*/
}

body {
    /* font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif; */
    font-family: "acumin-pro",sans-serif;
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    color: #FFF;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

.people {
  margin-bottom: 20px;
  text-align: center;

}

.top-padding {
    padding-top:5vh;
}

.divider {
    width: 100%;
    margin: 0px;
    color: #CCC;
    display: none;
}

/* Custom Button Styles */
.btn {
    border-radius: 0;
}
/*
.hdr-btn {
    position: absolute;
    width: 30%;
    bottom:10px;
    right:10%;
    font-weight: 400;
    transition: all 0.3s ease-in-out 0s;
    width: 100px;
    height: 100px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 4px solid #f58023;
    border-radius: 100% !important;
    font-size: 58px;
    color: #f58023;
    background: transparent none repeat scroll 0px 0px;
    transition: background 0.3s ease-in-out 0s;*/

}

.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: rgba(0,0,0,0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0,0,0,0.7);
}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}

/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}

/* Navbar */

.righty {
    float: right;
}

.navbar-fixed-top {
    padding: 6px 0;
    /*box-shadow: 0px 2px 10px #555;*/
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);

}

.navbar-collapse {
    border: none;
    padding-right: 5%;
    overflow-x: hidden;
}

.navbar-fixed-top .navbar-brand {
    font-size: 2em;
}

.navbar-fixed-top .navbar-shrink {
    padding: 10px 0;

}

.navbar-fixed-top.navbar-shrink {
    padding: 10px 0;
}

.navbar {
    font-size: 1.3em;
    font-weight: 500;
    background-color: rgba(29, 33, 32, 0.7);
    /*background-color: rgba(255, 255, 255, 0.7);*/
    border-bottom: 0px;
}

.navbar-default .navbar-nav>li>a,
.navbar-default .navbar-nav>li>a:focus{
    color: #EEE;
}
.navbar-default .navbar-nav>li>a:hover{
    color: #f58023;
}

.nav-links {
    margin-left:-10px;
}

#navbrand {
    height:125%;
    width: auto;
}
.navbar-fixed-top.navbar-shrink .navbar-brand {
    font-size: 1.5em;
    width: 100%;
}

.nav-links a {
    margin-right: -12px;
    text-align: right;
}

.navbar-toggle {
    border:none;
    background-color: transparent;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: transparent;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #EEE;
}

/* Header */

.header {
    position: relative;
    width: 100%;
    height: 100%;
}

.header-img {
    position: absolute;
    width: 30%;
    bottom:10px;
    left:10px;
}


.blurb {
    padding: 50px 0;

}

/* Testimonials */
.carousel {
    height: 100%;
    width: 100%;
    height: 27vh;
}

.testimonials {
    padding: 50px 0;

}

.testimonial-quote {
    text-align: right;
}

.testimonial-center {
    /*margin-top: 5%;*/
}

.carousel-control.left {
    background-image: none;
}

.carousel-control.right {
    background-image: none;
}

/* About */

.about {
    padding: 50px 0;

}

.about-img {
    width: 100%;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.about-name {
    font-size: 28px;
    font-weight: 400;
}

.seth-align,
.josh-align {
    margin-top: 2%;
}

@media screen and (max-width: 1200px) {
    .seth-align {
        text-align: center;
    }
    .josh-align {
        text-align: center;
    }
}


.about-offset {
    margin-left: 17%;
}

@media screen and (max-width: 1200px) {
    .about-offset {
        margin-left: 0%;
    }
}

/* Services */

.services {
    padding: 50px 0;
}

.service-item {
    height: 24rem;
    background-position: center center;
    background-size: cover;
    -webkit-transition: filter 1s ease, -webkit-filter 1s ease;
    transition: filter 1s ease, -webkit-filter 1s ease;
    padding: 0px;
    background-repeat: no-repeat;
    background-size: cover
}

.service-item a {
    text-decoration: none;
    display: inline-block;
    outline: 0;
    line-height: 1;
    /*border-bottom: 1px solid #f5f5f5;*/
    -webkit-transition: all .2s ease;
    transition: all .2s ease;
    background-color: inherit;
    color: inherit;
    opacity: 0.7;
}

h2 {
    font-size: 36px;
}

.service-heading {
    position: relative;
    margin-top: 3em;
    font-weight: 400;
    font-size: 28px;
}

.opaque {
    opacity: 1;
}

.service-item a:hover {
    /*background-color: transparent*/
    opacity: 0;
}

.service-inner {
    width: 100%;
    height: 100%;
}

.row {
    width: 100%;
}

.text-container {
    width: 75%;
    /*height: 100%;*/
    margin-left: 12.5%;
}

.second-stories {
    background-image: url(../img/steel1.jpg);
}

.kitchens {
    background-image: url(../img/steel2.jpg);
}

.bathrooms {
    background-image: url(../img/BittnerBath.jpg);
}

.decks {
    background-image: url(../img/BittnerExterior2.jpg);
}

.custom-homes {
    background-image: url(../img/BittnerExterior1.jpg);
}

.tenant {
    background-image: url(../img/BittnerUpstairshall.jpg);
}

.magic {
    background-image: url(../img/steel4.jpg);
}

/*.kitchens a {
    background-color: rgba(236, 111, 102, .5)
}*/

/* Callout */

.callout {
    display: table;
    margin-top: 50px;
    width: 100%;
    height: 400px;
    color: #fff;
    background: url(../img/fullteam.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}


/* Call to Action */

.call-to-action {
    padding: 50px 0;
}

.call-to-action .btn {
    margin: 10px;
}

/* Contact */
.contact-icon {
    font-size: 130px;
    width: 30%;
    /*color: #CCC;
    fill: #CCC;*/
    color: #EEE;
    fill: #EEE;
    margin-bottom: 10%;
    margin-top:10%;
}


.verticle-center {
    float: none;
    display: inline-block;
    vertical-align: middle;
    /*margin-right: -4px;*/
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 4vm;
    padding-bottom: 0.5em;
    background-color: #DDD;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    -webkit-transition: top .3s ease,opacity .3s ease;
    -moz-transition: top .3s ease,opacity .3s ease;
    -ms-transition: top .3s ease,opacity .3s ease;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #18bc9c;
}
.contact {
    padding: 50px 0;
}

/* Footer */

footer {
    padding: 100px 0;
}

